roles/firewall/files/hetz.rules.v4
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 10.0.2.2/32 ! -i br-e06af17fe586 -j DROP
-A PREROUTING -d 10.0.8.5/32 ! -i br-2cf5ec16802c -j DROP
-A PREROUTING -d 10.0.8.2/32 ! -i br-2cf5ec16802c -j DROP
-A PREROUTING -d 10.0.8.6/32 ! -i br-2cf5ec16802c -j DROP
-A PREROUTING -d 10.0.5.2/32 ! -i br-c9558ee1e30d -j DROP
-A PREROUTING -d 10.0.5.4/32 ! -i br-c9558ee1e30d -j DROP
-A PREROUTING -d 10.0.1.23/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.24/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.2/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.5/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.2.2/32 ! -i br-57389449a3a0 -j DROP
-A PREROUTING -d 10.0.1.7/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.9/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.10/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.11/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.14/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.15/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.16/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.17/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.2.4/32 ! -i br-57389449a3a0 -j DROP
-A PREROUTING -d 10.0.0.2/32 ! -i docker0 -j DROP
-A PREROUTING -d 10.0.2.3/32 ! -i br-57389449a3a0 -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 18888 -j DROP
-A PREROUTING -d 10.0.8.2/32 ! -i br-df155a1294c8 -j DROP
-A PREROUTING -d 10.0.1.6/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.8.3/32 ! -i br-df155a1294c8 -j DROP
-A PREROUTING -d 10.0.1.20/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.12/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.1.3/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.10.3/32 ! -i br-ecd368b5ac5c -j DROP
-A PREROUTING -d 10.0.1.4/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.8.4/32 ! -i br-df155a1294c8 -j DROP
-A PREROUTING -d 10.0.3.4/32 ! -i br-5cde1e485435 -j DROP
-A PREROUTING -d 10.0.10.2/32 ! -i br-ecd368b5ac5c -j DROP
-A PREROUTING -d 10.0.1.18/32 ! -i br-d4b3e6b3b0cf -j DROP
-A PREROUTING -d 10.0.3.2/32 ! -i br-5cde1e485435 -j DROP
-A PREROUTING -d 10.0.3.3/32 ! -i br-5cde1e485435 -j DROP
-A PREROUTING -d 10.0.3.5/32 ! -i br-5cde1e485435 -j DROP
-A PREROUTING -d 10.0.3.6/32 ! -i br-5cde1e485435 -j DROP
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -j ts-input
-A INPUT -p tcp -m tcp --dport 1904 -j ACCEPT
-A INPUT -s 100.64.0.0/10 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 18790 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.0.1.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j DROP
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -j ts-forward
-A DOCKER -d 10.0.1.4/32 ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 10.0.1.4/32 ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -p udp -m udp --dport 443 -j ACCEPT
-A DOCKER -d 10.0.1.4/32 ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -p tcp -m tcp --dport 443 -j ACCEPT
-A DOCKER -d 10.0.1.4/32 ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER -d 10.0.1.7/32 ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -p tcp -m tcp --dport 15432 -j ACCEPT
-A DOCKER -d 10.0.2.3/32 ! -i br-57389449a3a0 -o br-57389449a3a0 -p tcp -m tcp --dport 18799 -j ACCEPT
-A DOCKER -d 10.0.1.9/32 ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -p tcp -m tcp --dport 6002 -j ACCEPT
-A DOCKER -d 10.0.1.9/32 ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -p tcp -m tcp --dport 6001 -j ACCEPT
-A DOCKER -d 10.0.1.15/32 ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 10.0.1.16/32 ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -p tcp -m tcp --dport 8088 -j ACCEPT
-A DOCKER -d 10.0.1.16/32 ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 10.0.1.16/32 ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -p tcp -m tcp --dport 8001 -j ACCEPT
-A DOCKER ! -i br-5cde1e485435 -o br-5cde1e485435 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-c9558ee1e30d -o br-c9558ee1e30d -j DROP
-A DOCKER ! -i br-d4b3e6b3b0cf -o br-d4b3e6b3b0cf -j DROP
-A DOCKER ! -i br-dd6ec6be334c -o br-dd6ec6be334c -j DROP
-A DOCKER ! -i br-bcd1b4603653 -o br-bcd1b4603653 -j DROP
-A DOCKER ! -i br-df155a1294c8 -o br-df155a1294c8 -j DROP
-A DOCKER ! -i br-ecd368b5ac5c -o br-ecd368b5ac5c -j DROP
-A DOCKER ! -i br-569e5362bbc2 -o br-569e5362bbc2 -j DROP
-A DOCKER ! -i br-57389449a3a0 -o br-57389449a3a0 -j DROP
-A DOCKER ! -i br-5c9d8d516150 -o br-5c9d8d516150 -j DROP
-A DOCKER-BRIDGE -o br-5cde1e485435 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-c9558ee1e30d -j DOCKER
-A DOCKER-BRIDGE -o br-d4b3e6b3b0cf -j DOCKER
-A DOCKER-BRIDGE -o br-dd6ec6be334c -j DOCKER
-A DOCKER-BRIDGE -o br-bcd1b4603653 -j DOCKER
-A DOCKER-BRIDGE -o br-df155a1294c8 -j DOCKER
-A DOCKER-BRIDGE -o br-ecd368b5ac5c -j DOCKER
-A DOCKER-BRIDGE -o br-569e5362bbc2 -j DOCKER
-A DOCKER-BRIDGE -o br-57389449a3a0 -j DOCKER
-A DOCKER-BRIDGE -o br-5c9d8d516150 -j DOCKER
-A DOCKER-CT -o br-5cde1e485435 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-c9558ee1e30d -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-d4b3e6b3b0cf -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-dd6ec6be334c -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-bcd1b4603653 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-df155a1294c8 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-ecd368b5ac5c -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-569e5362bbc2 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-57389449a3a0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-5c9d8d516150 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-5cde1e485435 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-c9558ee1e30d -j ACCEPT
-A DOCKER-FORWARD -i br-d4b3e6b3b0cf -j ACCEPT
-A DOCKER-FORWARD -i br-dd6ec6be334c -j ACCEPT
-A DOCKER-FORWARD -i br-bcd1b4603653 -j ACCEPT
-A DOCKER-FORWARD -i br-df155a1294c8 -j ACCEPT
-A DOCKER-FORWARD -i br-ecd368b5ac5c -j ACCEPT
-A DOCKER-FORWARD -i br-569e5362bbc2 -j ACCEPT
-A DOCKER-FORWARD -i br-57389449a3a0 -j ACCEPT
-A DOCKER-FORWARD -i br-5c9d8d516150 -j ACCEPT
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.66.37.58/32 -i lo -j ACCEPT
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
:ts-postrouting - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 10.0.6.0/24 ! -o br-5c9d8d516150 -j MASQUERADE
-A POSTROUTING -s 10.0.10.0/24 ! -o br-ecd368b5ac5c -j MASQUERADE
-A POSTROUTING -s 10.0.8.0/24 ! -o br-df155a1294c8 -j MASQUERADE
-A POSTROUTING -s 10.0.0.0/24 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.0.4.0/24 ! -o br-bcd1b4603653 -j MASQUERADE
-A POSTROUTING -s 10.0.9.0/24 ! -o br-569e5362bbc2 -j MASQUERADE
-A POSTROUTING -j ts-postrouting
-A POSTROUTING -s 10.0.7.0/24 ! -o br-dd6ec6be334c -j MASQUERADE
-A POSTROUTING -s 10.0.8.0/24 ! -o br-2cf5ec16802c -j MASQUERADE
-A POSTROUTING -s 10.0.2.0/24 ! -o br-57389449a3a0 -j MASQUERADE
-A POSTROUTING -s 10.0.2.0/24 ! -o br-e06af17fe586 -j MASQUERADE
-A POSTROUTING -s 10.0.5.0/24 ! -o br-c9558ee1e30d -j MASQUERADE
-A POSTROUTING -s 10.0.4.0/24 ! -o br-3382f670a1c0 -j MASQUERADE
-A POSTROUTING -s 10.0.1.0/24 ! -o br-d4b3e6b3b0cf -j MASQUERADE
-A POSTROUTING -s 10.0.3.0/24 ! -o br-5cde1e485435 -j MASQUERADE
-A DOCKER ! -i br-d4b3e6b3b0cf -p tcp -m tcp --dport 18001 -j DNAT --to-destination 10.0.1.16:8001
-A DOCKER ! -i br-d4b3e6b3b0cf -p tcp -m tcp --dport 18080 -j DNAT --to-destination 10.0.1.16:8080
-A DOCKER ! -i br-d4b3e6b3b0cf -p tcp -m tcp --dport 18088 -j DNAT --to-destination 10.0.1.16:8088
-A DOCKER ! -i br-d4b3e6b3b0cf -p tcp -m tcp --dport 8000 -j DNAT --to-destination 10.0.1.15:8080
-A DOCKER ! -i br-d4b3e6b3b0cf -p tcp -m tcp --dport 6001 -j DNAT --to-destination 10.0.1.9:6001
-A DOCKER ! -i br-d4b3e6b3b0cf -p tcp -m tcp --dport 6002 -j DNAT --to-destination 10.0.1.9:6002
-A DOCKER -d 127.0.0.1/32 ! -i br-57389449a3a0 -p tcp -m tcp --dport 18888 -j DNAT --to-destination 10.0.2.3:18799
-A DOCKER ! -i br-d4b3e6b3b0cf -p tcp -m tcp --dport 15432 -j DNAT --to-destination 10.0.1.7:15432
-A DOCKER ! -i br-d4b3e6b3b0cf -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.0.1.4:80
-A DOCKER ! -i br-d4b3e6b3b0cf -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.0.1.4:443
-A DOCKER ! -i br-d4b3e6b3b0cf -p udp -m udp --dport 443 -j DNAT --to-destination 10.0.1.4:443
-A DOCKER ! -i br-d4b3e6b3b0cf -p tcp -m tcp --dport 8080 -j DNAT --to-destination 10.0.1.4:8080
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
